Fix white space on side of responsive navbar

--- a/css/style.css
+++ b/css/style.css
@@ -149,7 +149,7 @@ hr {
 	}
 
 	#div-navbar #a-title {
-		width: 100%;
+		width: auto;
 	}
 }
 
